# ucv-ate-si-laboratorio07

./: README.md  sonar-project.properties
.github/workflows/: build.yml  ci.yml
.sonarlint/: connectedMode.json
si_image_processing_lab/: pyproject.toml
si_image_processing_lab/si-image-processing-lab/: README.md  pyproject.toml
si_image_processing_lab/si-image-processing-lab/conf/base/: parameters.yml
si_image_processing_lab/si-image-processing-lab/src/si_image_processing_lab/: __init__.py  __main__.py  pipeline_registry.py  settings.py
si_image_processing_lab/si-image-processing-lab/src/si_image_processing_lab/pipelines/image_processing/: nodes.py  pipeline.py
si_image_processing_lab/si-image-processing-lab/tests/: test_image_processing.py
