[project]
name = "si-image-processing-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pillow (>=12.2.0,<13.0.0)",
    "kedro (>=1.4.0,<2.0.0)",
    "kedro-datasets (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.14,<0.16.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
